<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagen"
            android:layout_width="74dp"
            android:layout_height="92dp"
            android:layout_gravity="left"
            android:layout_marginRight="20dp"
            android:src="@drawable/img">

        </de.hdodenhof.circleimageview.CircleImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/textoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombrePersona"
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                android:textSize="26dp"
                android:textStyle="bold">

            </TextView>
        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mensaje"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textoMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimoMensaje"
            android:textAlignment="textStart"
            android:textColor="@color/purple_200"
            android:textSize="26sp"
            android:textStyle="italic"
            android:layout_marginBottom="30dp">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/textoAsunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ultimoMensaje"
            android:textAlignment="textStart"
            android:textColor="@color/purple_200"
            android:textSize="26sp"
            android:textStyle="italic"
            android:layout_marginBottom="60dp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DatosRe"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numeroTelefono"
            android:textAlignment="textStart"
            android:textColor="@color/purple_200"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pais"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/pais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombrePais"
            android:textAlignment="textStart"
            android:textColor="@color/purple_200"
            android:textSize="26sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>


</LinearLayout>