<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="7dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginVertical="10dp"
            android:background="@color/design_default_color_background"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenPerfil"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/img"
                app:civ_border_width="2dp">

            </de.hdodenhof.circleimageview.CircleImageView>

            <LinearLayout
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombrePersona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombrePersona"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/ultimoMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ultimoMensaje"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:id="@+id/ultimoAsunto"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/ultimoMensaje"
                    android:textSize="14sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="73dp"
            android:layout_marginStart="340dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/horaMensaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="15dp"
                android:text="@string/horaMensaje">

            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="22dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:src="@drawable/img_6" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>